feat: get object by id proto definition
